# teex

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  lint.sh  package-lock.json  package.json  test-open.sh  test.sh
.github/workflows/: ci.yml  release.yml
skills/: teex.md  window-merge-tabs-ux-spec.md
src/: app-utils.js  index.html  main.js  path-input.js  preview.html  styles.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_runtime.rs  apple_events.rs  cli_install.rs  constants.rs  context_menu.rs  cross_window_drag.rs  default_handler.rs  files.rs  git_status.rs  launch.rs  lib.rs  mac_services.rs  main.rs  menu.rs  menu_events.rs  path_utils.rs  recent_files.rs  tab_drag_preview.rs  tab_transfer.rs  watchers.rs  window_title.rs
src-tauri/src/git/: diff.rs  mod.rs  status.rs
src-tauri/src/linux/: icons.rs  mod.rs
src-tauri/src/macos/: icons.rs  mod.rs  mouse_nav.rs
src-tauri/src/tabs/: drag_preview.rs
src-tauri/src/tests/: cli_install.rs  common.rs  files.rs  git_diff.rs  git_status.rs  launch.rs  mod.rs  recent_files.rs  utils.rs
src-tauri/src/window/: context_menu.rs  mod.rs  os_open.rs
src/app/: controller-setup.js  drag-drop-controller.js  events-controller.js  external-file-watch-controller.js  open-paths-controller.js  preferences.js  runtime-state.js  session-restore.js
src/files/: controller.js
src/search/: editor-highlights.js  find-controller.js  find-engine.js  find-highlights.js  regex-utils.js
src/sidebar/: context-menu.js  controller.js  drag.js  (+4 more)
tests/: app-utils.test.mjs  path-input.test.mjs  ui-behavior.test.mjs
(+97 files in other folders)
