[package]
name = "teex"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "teex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
walkdir = "2"
notify = "6"
trash = "5"
