[package]
name = "teex"
version = "0.3.0"
description = "Desktop review tool for Markdown, code, and Git-backed workflows"
authors = ["you"]
edition = "2021"

[lib]
name = "teex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
walkdir = "2"
notify = "6"
trash = "5"
toml = "0.8"
quick-xml = "0.37"
csv = "1"
percent-encoding = "2"
http = "1"
